First GitHub commit
Added most files from all of my excercises in IT2805, adding a simple
chess game and excluding the web project

No picture or video files shuould have been uploaded

--- a/Oving6/Oving6.html
+++ b/Oving6/Oving6.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/oleast/it2805/style.css"/>
-		<title>Webtek - IT2805</title>
 		<script type="text/javascript" src="/oleast/it2805/scripts/jquery.js"></script>
 		<script type="text/javascript" src="/oleast/it2805/scripts/import.js"></script>
+		<title>Øving 6</title>
 	</head>
 	<body>
 		<header>
@@ -19,11 +19,17 @@
 		<nav id="nav">
 		</nav>
 		<section>
-			<h1></h1>
 			<br>
-			<h3></h3>
-			<p>
-			</p>
+			<br>
+			<h3>Øving 6</h3>
+			<br>
+			<ol>
+				<li><a href="Oving6_1/countries.xml">Understating basic XML concepts</a></li>
+				<br>
+				<li><a href="Oving6_2/faq.xml">Format XML using CSS</a></li>
+				<br>
+				<li><a href="Oving6_3">Validating XML using DTD and XML schema</a></li>
+			</ol>
 		</section>
 		<footer>
 			<hr>
