--- a/Oving3/Oving3.html
+++ b/Oving3/Oving3.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/oleast/it2805/style.css"/>
-		<title>Webtek - IT2805</title>
 		<script type="text/javascript" src="/oleast/it2805/scripts/jquery.js"></script>
 		<script type="text/javascript" src="/oleast/it2805/scripts/import.js"></script>
+		<title>Øving 3</title>
 	</head>
 	<body>
 		<header>
@@ -19,11 +19,21 @@
 		<nav id="nav">
 		</nav>
 		<section>
-			<h1></h1>
 			<br>
-			<h3></h3>
-			<p>
-			</p>
+			<br>
+			<h3>Øving 3</h3>
+			<br>
+			<ol>
+				<li><a href="Oving3_1/gloshjem.html">Fonts and colors</a></li>
+				<br>
+				<li><a href="Oving3_2/positioning.html">Practicing CSS Positioning</a></li>
+				<br>
+				<li><a href="Oving3_3/site.html">Style a HTML file</a></li>
+				<br>
+				<li><a href="Oving3_4/gloshjem.html">Consistent look and feel</a></li>
+				<br>
+				<li><a href="Oving3_5/assignments.html">Same CSS, different HTML</a></li>
+			</ol>
 		</section>
 		<footer>
 			<hr>
