--- a/Oving5/Oving5.html
+++ b/Oving5/Oving5.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/oleast/it2805/style.css"/>
-		<title>Webtek - IT2805</title>
 		<script type="text/javascript" src="/oleast/it2805/scripts/jquery.js"></script>
 		<script type="text/javascript" src="/oleast/it2805/scripts/import.js"></script>
+		<title>Øving 5</title>
 	</head>
 	<body>
 		<header>
@@ -19,11 +19,17 @@
 		<nav id="nav">
 		</nav>
 		<section>
-			<h1></h1>
 			<br>
-			<h3></h3>
-			<p>
-			</p>
+			<br>
+			<h3>Øving 5</h3>
+			<br>
+			<ol>
+				<li><a href="console.html">Writing to the console</a></li>
+				<br>
+				<li><a href="functions.html">Arrays and built-in functions</a></li>
+				<br>
+				<li><a href="stopwatch.html">Event handling and setting timers</a></li>
+			</ol>
 		</section>
 		<footer>
 			<hr>
