--- a/Oving8/Oving8.html
+++ b/Oving8/Oving8.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/oleast/it2805/style.css"/>
-		<title>Webtek - IT2805</title>
 		<script type="text/javascript" src="/oleast/it2805/scripts/jquery.js"></script>
 		<script type="text/javascript" src="/oleast/it2805/scripts/import.js"></script>
+		<title>Øving 8</title>
 	</head>
 	<body>
 		<header>
@@ -19,11 +19,17 @@
 		<nav id="nav">
 		</nav>
 		<section>
-			<h1></h1>
 			<br>
-			<h3></h3>
-			<p>
-			</p>
+			<br>
+			<h3>Øving 8</h3>
+			<br>
+			<ol>
+				<li><a href="Oving8_1/skeleton.html">Canvas basics</a></li>
+				<br>
+				<li><a href="Oving8_2/doge.html">Using images</a></li>
+				<br>
+				<li><a href="Oving8_3/masterrace.html">Animation</a></li>
+			</ol>
 		</section>
 		<footer>
 			<hr>
